--- a/MyApplication3/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main.xml
@@ -114,6 +114,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/pilihlayout"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
