--- a/MyApplication3/app/src/main/res/layout/item.xml
+++ b/MyApplication3/app/src/main/res/layout/item.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/gambar"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
+                android:padding="8dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
