--- a/MyApplication3/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication3/app/src/main/res/layout/activity_main.xml
@@ -100,14 +100,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:background="@android:color/transparent"
-                        android:src="@drawable/ic_filter_list"
+                        android:src="@drawable/ic_import_export"
                         android:tint="#FF5722" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Pilih"
+                        android:text="Urutkan"
                         android:textColor="#ff5722"
                         android:textSize="20sp"
                         android:layout_marginLeft="5dp"/>
